[gd_scene load_steps=9 format=3 uid="uid://cfxsehycq55qr"]

[ext_resource type="Theme" uid="uid://ydfdtqbxhnlv" path="res://Main_scane/Option_list/Theme/System.tres" id="1_hgr8l"]
[ext_resource type="Script" uid="uid://dsmhsdwudfve8" path="res://Main_scane/Option_list/system.gd" id="2_02nco"]
[ext_resource type="Theme" uid="uid://crt1y2g4nunt5" path="res://Main_scane/Option_list/Theme/Sysyem_head.tres" id="2_lcodd"]
[ext_resource type="Theme" uid="uid://bv15hsbarh0ee" path="res://Main_scane/Option_list/Theme/maneveue.tres" id="3_02nco"]
[ext_resource type="Theme" uid="uid://qqtlvkypad6c" path="res://Main_scane/Option_list/Theme/for_label.tres" id="4_02nco"]
[ext_resource type="Theme" uid="uid://ihkj5ctm6n8p" path="res://Main_scane/Option_list/Theme/maneveue_head.tres" id="4_fqi33"]
[ext_resource type="Theme" uid="uid://clf85mpqe5p0v" path="res://tactic.tres" id="5_xwg7i"]
[ext_resource type="Theme" uid="uid://dduae04ub3q8p" path="res://Main_scane/Option_list/Theme/tactic_head.tres" id="6_6xska"]

[node name="System" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_hgr8l")
script = ExtResource("2_02nco")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="Head" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2_lcodd")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Head"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Head/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Name" type="RichTextLabel" parent="VBoxContainer/Head/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("4_02nco")
text = "Теги"
fit_content = true

[node name="Tags" type="RichTextLabel" parent="VBoxContainer/Head/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
text = "Теги"
fit_content = true

[node name="Param" type="RichTextLabel" parent="VBoxContainer/Head/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
fit_content = true

[node name="Effect" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Effect" type="RichTextLabel" parent="VBoxContainer/Effect"]
layout_mode = 2
mouse_filter = 2
text = "Большое описание Большое описание Большое описание"
fit_content = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Description" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Description" type="RichTextLabel" parent="VBoxContainer/Description"]
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "[i]Большое описание Большое описание Большое описание "
fit_content = true

[node name="Maneuver1" type="MarginContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
mouse_filter = 2
theme = ExtResource("3_02nco")

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/Maneuver1"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Maneuver1/PanelContainer2"]
layout_mode = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/Maneuver1/PanelContainer2/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("4_fqi33")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Maneuver1/PanelContainer2/VBoxContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Maneuver1/PanelContainer2/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="RichTextLabel" parent="VBoxContainer/Maneuver1/PanelContainer2/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
fit_content = true

[node name="Label2" type="RichTextLabel" parent="VBoxContainer/Maneuver1/PanelContainer2/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Maneuver1/PanelContainer2/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Maneuver1/PanelContainer2/VBoxContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
text = "Описание"
fit_content = true

[node name="Tactic1" type="MarginContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
mouse_filter = 2
theme = ExtResource("5_xwg7i")

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/Tactic1"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Tactic1/PanelContainer2"]
layout_mode = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/Tactic1/PanelContainer2/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("6_6xska")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Tactic1/PanelContainer2/VBoxContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Tactic1/PanelContainer2/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="RichTextLabel" parent="VBoxContainer/Tactic1/PanelContainer2/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
fit_content = true

[node name="Label2" type="RichTextLabel" parent="VBoxContainer/Tactic1/PanelContainer2/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
fit_content = true

[node name="Label3" type="RichTextLabel" parent="VBoxContainer/Tactic1/PanelContainer2/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Tactic1/PanelContainer2/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Tactic1/PanelContainer2/VBoxContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
text = "Описание"
fit_content = true

[node name="Tactic2" type="MarginContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
mouse_filter = 2
theme = ExtResource("5_xwg7i")

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/Tactic2"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Tactic2/PanelContainer2"]
layout_mode = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/Tactic2/PanelContainer2/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("6_6xska")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Tactic2/PanelContainer2/VBoxContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Tactic2/PanelContainer2/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="VBoxContainer/Tactic2/PanelContainer2/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
fit_content = true

[node name="Label2" type="RichTextLabel" parent="VBoxContainer/Tactic2/PanelContainer2/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Tactic2/PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Tactic2/PanelContainer2/VBoxContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
text = "Описание"
fit_content = true

[node name="Button3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Add_special" type="Button" parent="VBoxContainer/Button3"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
text = "Добавить в особый слот"

[node name="Button4" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Remove_special" type="Button" parent="VBoxContainer/Button4"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
text = "Убрать из  особого слота"

[node name="Button" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Add" type="Button" parent="VBoxContainer/Button"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
text = "Добавить"

[node name="Button2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Remove" type="Button" parent="VBoxContainer/Button2"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
text = "Убрать"

[connection signal="pressed" from="VBoxContainer/Button3/Add_special" to="." method="_on_add_special_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4/Remove_special" to="." method="_on_remove_special_pressed"]
[connection signal="pressed" from="VBoxContainer/Button/Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2/Remove" to="." method="_on_remove_pressed"]
